--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -1,5 +1,10 @@
-- name: Build Pipeline
-  uses: nocturlab/setup-vlang-action@v1.2.0
+name: Build Pipeline
+uses: nocturlab/setup-vlang-action@v1.2.0
+
+on:
+  push:
+    paths-ignore:
+      - '**.md'
 
 jobs:
   run:
