--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -19,15 +19,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: vlang/v
+      - name: Checkout Kurarin
+        uses: actions/checkout@v2
+        with:
+          path: kurarin
       - name: Build local V
         run: make && sudo ./v symlink
       - name: Compile Kurarin
         run: |
+          cd kurarin
           v -o kurarin_linux .
       - name: Create binary only artifact
         uses: actions/upload-artifact@v2
         with:
           name: linux_x64
-          path: ./kurarin_linux
+          path: ./kurarin/kurarin_linux
 
   
