--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -7,32 +7,30 @@ on:
       - dev
 
 jobs:
-  build-linux-x64:
-    runs-on: ubuntu-latest
+  build-windows-x64:
+    runs-on: windows-2019
     timeout-minutes: 30
     env:
-      VFLAGS: -cg -cc gcc
+      VFLAGS: -cc gcc
     steps:
-      - name: Install Boehm GC
-        run: sudo apt-get install libgc-dev
       - name: Checkout V
         uses: actions/checkout@v2
         with:
           repository: vlang/v
-      - name: Checkout Kurarin
+      - name: Checkout kurarin
         uses: actions/checkout@v2
         with:
           path: kurarin
       - name: Build local V
-        run: make && sudo ./v symlink
-      - name: Compile Kurarin
+        run: .\make.bat -gcc
+      - name: Compile kurarin for Windows
         run: |
           cd kurarin
-          v -o kurarin_linux .
+          ..\v.exe -cg -o kurarin_win_x64.exe .
       - name: Create binary only artifact
         uses: actions/upload-artifact@v2
         with:
-          name: linux_x64
-          path: ./kurarin/kurarin_linux
+          name: windows_x64
+          path: ./kurarin/kurarin_win_x64.exe
 
   
