--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -43,5 +43,26 @@ jobs:
         with:
           name: windows_x64
           path: ./kurarin/kurarin_release
+          
+  pre-release:
+    name: Release workflow builds
+    needs: [build-windows-x64]
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Fetch windows_x64
+        uses: actions/download-artifact@v1
+        with:
+          name: windows_x64
+          path: ./windows_x64
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        name: Create Release and Upload Assets
+        id: create_release
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Latest Development Build"
+          files: |
+            windows_x64/
 
   
