--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -60,7 +60,7 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
-          path: './windows_x64'
+          path: 'windows_x64'
           filename: 'kurarin_winx64.zip'
 
   
