--- a/.github/workflows/vlang-build-pipeline.yml
+++ b/.github/workflows/vlang-build-pipeline.yml
@@ -54,13 +54,17 @@ jobs:
         with:
           name: windows_x64
           path: ./windows_x64
-          
-      - uses: actions/checkout@master
-      - name: Upload as zip
-        uses: thedoctor0/zip-release@master
+      - name: Zip the whole thing
+        run: zip -r "kurarin_win64.zip" ./windows_x64
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        name: Create Release and Upload Assets
+        id: create_release
         with:
-          type: 'zip'
-          path: 'windows_x64'
-          filename: 'kurarin_winx64.zip'
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Latest Development Build"
+          files: |
+            kurarin_win64.zip
 
   
