Ignore Project Diva Assets (for now)

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,23 @@
 videos/*
 *.mp4
 *.mp3
-assets/shaders/*.h
-assets/maps/*
 videos/*
 *.log
 dementia
 settings.json
 *.json
 build/*
+library/microui
+
+# Engine Specific Textures
 assets/psekai/*
 assets/textures/*
-library/microui
-main_sekai
-main_sekai.vv
+
+assets/diva/*
+assets/scores/*
+assets/sfx/*
+
+
 assets/replays/*
+assets/shaders/*.h
+assets/maps/*
